Created and tested the test cases for frontend testing

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@ node_modules/
 # Ignore temporary files created by the OS
 .DS_Store
 Thumbs.db
+
+# Ignore NYC output
+.nyc_output/
+# Ignore coverage folder
+coverage/
