Added step to run frontend test cases

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,5 +29,11 @@ jobs:
     - name: Install dependencies based on package.json
       run: npm install
 
+    - name: Instrument the frontend code
+      run: cp -R public instrumented & npx nyc instrument public instrumented
+      
+    - name: Run the frontend test cases
+      run: rm -rf .nyc_output & npx nyc --nycrc-path .nycrc-frontend cypress run
+
     - name: Run backend tests
       run: npm run backend-test
