solve the version issue

--- a/dailydose-deployment.yaml
+++ b/dailydose-deployment.yaml
@@ -14,6 +14,6 @@ spec: # defines the desired state of the Deployment.
     spec: # specifies the container(s) to run
       containers:
       - name: daily-dose-container
-        image: aniqamir/daily-dose-docker-img:v3
+        image: aniqamir/daily-dose-docker-img:latest
         ports:
         - containerPort: 5050 # specifies the port that the application listens on
